Implment logs modal Also changed date from `mm/dd/yyyy` to `dd/mm/yyyy` Also made `overflow: auto` (hide scrollbar when no scrolling Also fixed bug whereby popup.html doesn't work when `chrome.windows.update` fails

--- a/extension/theme.css
+++ b/extension/theme.css
@@ -23,6 +23,10 @@
   --bulma-light-l: 36%;
 }
 
+html{
+  overflow: auto;
+}
+
 .modal {/*Prevent accidental click to 'logout' when double click close button*/
   --bulma-modal-close-right: 2.5em;
   --bulma-modal-close-top: 2.5em;
